methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:1: error: not found: value baisserBrosse
override def run() {def marquer(){baisserBrosse();leverBrosse()}
                                  ^PictureMono1:1: error: not found: value leverBrosse
override def run() {def marquer(){baisserBrosse();leverBrosse()}
                                                  ^PictureMono1:2: error: not found: value avancer
def faireV(){avancer();avancer();marquer();avancer;gauche();avancer();marquer();reculer();droite();avancer();marquer();avancer();avancer()}
             ^PictureMono1:2: error: not found: value avancer
def faireV(){avancer();avancer();marquer();avancer;gauche();avancer();marquer();reculer();droite();avancer();marquer();avancer();avancer()}
                       ^PictureMono1:2: error: not found: value avancer
def faireV(){avancer();avancer();marquer();avancer;gauche();avancer();marquer();reculer();droite();avancer();marquer();avancer();avancer()}
                                           ^PictureMono1:2: error: not found: value avancer
def faireV(){avancer();avancer();marquer();avancer;gauche();avancer();marquer();reculer();droite();avancer();marquer();avancer();avancer()}
                                                            ^PictureMono1:2: error: not found: value reculer
def faireV(){avancer();avancer();marquer();avancer;gauche();avancer();marquer();reculer();droite();avancer();marquer();avancer();avancer()}
                                                                                ^PictureMono1:2: error: not found: value avancer
def faireV(){avancer();avancer();marquer();avancer;gauche();avancer();marquer();reculer();droite();avancer();marquer();avancer();avancer()}
                                                                                                   ^PictureMono1:2: error: not found: value avancer
def faireV(){avancer();avancer();marquer();avancer;gauche();avancer();marquer();reculer();droite();avancer();marquer();avancer();avancer()}
                                                                                                                       ^PictureMono1:2: error: not found: value avancer
def faireV(){avancer();avancer();marquer();avancer;gauche();avancer();marquer();reculer();droite();avancer();marquer();avancer();avancer()}
                                                                                                                                 ^